--- a/OLCTest/OLCTest.vcxproj.filters
+++ b/OLCTest/OLCTest.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClInclude Include="SpaceObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="MovingSpaceObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Source.cpp">
@@ -30,6 +33,9 @@
       <Filter>Resource Files</Filter>
     </ClCompile>
     <ClCompile Include="SpaceObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="MovingSpaceObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
