Box implementation and minor fixes

--- a/OLCTest/OLCTest.vcxproj
+++ b/OLCTest/OLCTest.vcxproj
@@ -139,11 +139,13 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Box.h" />
     <ClInclude Include="MovingSpaceObject.h" />
     <ClInclude Include="olcSimpleEngine.h" />
     <ClInclude Include="SpaceObject.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Box.cpp" />
     <ClCompile Include="MovingSpaceObject.cpp" />
     <ClCompile Include="olcSimpleEngine.cpp" />
     <ClCompile Include="Source.cpp" />
